--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "moti": "^0.25.3",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-reanimated": "^3.3.0",
+    "react-native": "0.72.3",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
-    "react-native-svg": "^13.10.0",
+    "react-native-svg": "13.4.0",
     "shortid": "^2.2.16",
     "styled-components": "^6.0.4",
     "styled-system": "^5.1.5"
