--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.72.2",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-native": "^4.0.0",
     "prettier": "^3.0.0",
     "typescript": "^4.9.4"
   },
