--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "@react-navigation/native": "^6.1.7",
     "@types/shortid": "^0.0.29",
     "expo": "~48.0.18",
-    "expo-linking": "^5.0.2",
+    "expo-linking": "~4.0.1",
     "expo-status-bar": "~1.4.4",
     "expo-svg-uri": "^1.3.1",
     "moti": "^0.25.3",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.71.8",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.22.1",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "shortid": "^2.2.16",
     "styled-components": "^6.0.4",
